# Nemosys

./: .clang-format  .gitignore  .gitlab-ci.yml  AMRFoam_8C.html  AMRFoam_8C_source.html  AMRFoam_8H.html  AMRFoam_8H_source.html  AUTHORS  AutoVerificationDriver_8C.html  AutoVerificationDriver_8C_source.html  AutoVerificationDriver_8H.html  AutoVerificationDriver_8H_source.html  AutoVerificationJson_8H.html  AutoVerificationJson_8H_source.html  AuxiliaryFunctions_8H.html  AuxiliaryFunctions_8H.js  AuxiliaryFunctions_8H_source.html  BUILD  BlockMeshMeshGenDriver_8C.html  BlockMeshMeshGenDriver_8C_source.html  BlockMeshMeshGenDriver_8H.html  BlockMeshMeshGenDriver_8H_source.html  CFMeshMeshGenDriver_8C.html  CFMeshMeshGenDriver_8C_source.html  CFMeshMeshGenDriver_8H.html  CFMeshMeshGenDriver_8H_source.html  CMakeLists.txt  CTestConfig.cmake  CirclesAndPolys_8C.html  CirclesAndPolys_8C.js  CirclesAndPolys_8C_source.html  CirclesAndPolys_8H.html  CirclesAndPolys_8H_source.html  Conda_8md.html  Conda_8md_source.html  ConservativeSurfaceTransfer_8C.html  ConservativeSurfaceTransfer_8C_source.html  ConservativeSurfaceTransfer_8H.html  ConservativeSurfaceTransfer_8H_source.html  ConservativeVolumeTransfer_8C.html  (+1591 more)
PolyApprox/: CMakeLists.txt  coords  data2
PolyApprox/include/: polyApprox.H
PolyApprox/src/: polyApprox.C
PolyApprox/utils/: polyApproxRun.C
contrib/ann-1.1.2/: CMakeLists.txt
contrib/cfmesh-1.1.2ir1/: CMakeLists.txt
contrib/cfmesh-1.1.2ir1/executables/: CMakeLists.txt
contrib/cfmesh-1.1.2ir1/meshLibrary/: CMakeLists.txt
contrib/fast-cpp-csv-parser-75600d0/: CMakeLists.txt
contrib/foamutils/: CMakeLists.txt
contrib/foamutils/include/: blockMsh.H  createPatch.H  foamToSurface.H  getDicts.H  mergeMeshes.H  mergePolyMesh.H  snappyMesh.H  splitMeshRegions.H  surfaceLambdaMuSmooth.H  surfaceSplitByTopology.H
contrib/foamutils/src_files/: blockMsh.C  createPatch.C  foamToSurface.C  getDicts.C  mergeMeshes.C  mergePolyMesh.C  snappyMesh.C  splitMeshRegions.C  surfaceLambdaMuSmooth.C  surfaceSplitByTopology.C
contrib/kmeans-5b9691d/: CMakeLists.txt
contrib/kmeans-5b9691d/src/: kmeans.cpp  kmeans.h  point.cpp  point.h
contrib/libsupermesh-1.0.1/: AUTHORS  CMakeLists.txt  COPYING  README.md
contrib/libsupermesh-1.0.1/config/: libsupermesh.pc.in
contrib/libsupermesh-1.0.1/include/: Data_Structures_C.h  R-Tree_Intersection_Finder_C++.h  Read_Halos_C++.h  libsupermesh-c.h  libsupermesh.h.in  libsupermesh_configuration.h.in  libsupermesh_debug.h  libsupermesh_debug_C.h  tinystr.h  tinyxml.h
contrib/libsupermesh-1.0.1/spatialindex-1.8.5/: CMakeLists.txt
contrib/libsupermesh-1.0.1/src/: C_bindings.F90  Data_Structures_C++.cpp  Data_Structures_C.c  Debug.F90  Debug_C.c  Graphs.F90  Halo_Ownership.F90  Integer_Map.F90  Integer_Set.F90  Intersection_Finder.F90  Intersections.F90  Interval_Intersection.F90  Octree_Intersection_Finder.F90  Parallel_Supermesh.F90  Precision.F90  Quadtree_Intersection_Finder.F90  R-Tree_Intersection_Finder_C++.cpp  Read_Halos.F90  Read_Halos_C++.cpp  Read_Triangle.F90  Supermesh.F90  Tetrahedron_Intersection.F90  Triangle_Intersection.F90  Unittest_Tools.F90  libsupermesh.F90  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
contrib/madlib-1.3.0/: CMakeLists.txt  Copyright.txt  Credits.txt  License.txt  MAdConfig.h.in~  Makefile.am  Makefile.in  README  configure  configure.ac  doxygen.config  variables.in
contrib/madlib-1.3.0/Adapt/: AdaptInterface.cc  AdaptInterface.h  CMakeLists.txt  Makefile.am  Makefile.in  MeshParametersManager.cc  MeshParametersManager.h
contrib/madlib-1.3.0/Common/: CMakeLists.txt  MAdDefines.h  MAdFieldEvaluator.h  MAdLib.cc  MAdLib.h  MAdMatrix.cc  MAdMatrix.h  MAdMessage.cc  MAdMessage.h  MAdMetric.cc  MAdMetric.h  MAdResourceManager.cc  MAdResourceManager.h  MAdSingleton.h  MAdStringFieldEvaluator.cc  MAdStringFieldEvaluator.h  MAdVector3.h  Makefile.am  Makefile.in  MathUtils.cc  MathUtils.h
contrib/madlib-1.3.0/Geo/: CMakeLists.txt  GM_Iterators.h  GmshEntities.cc  GmshEntities.h  GmshModel.cc  GmshModel.h  MAdModel.cc  MAdModel.h  Makefile.am  Makefile.in  ModelInterface.cc  ModelInterface.h  NullEntities.cc  NullEntities.h  NullModel.cc  NullModel.h  PGList.h  Physical.h  discreteFace.h
contrib/madlib-1.3.0/Mesh/: Balance.cc  CMakeLists.txt  CheckMesh.cc  CheckMesh.h  CheckOrientation.cc  CheckOrientation.h  Makefile.am  Makefile.in  Mark.cc  Mark.h  MeshDataBase.cc  MeshDataBase.h  MeshDataBaseAttachable.h  MeshDataBaseComm.cc  MeshDataBaseComm.h  MeshDataBaseCommCheck.cc  MeshDataBaseCommCheck.h  MeshDataBaseCommPeriodic.h  MeshDataBaseGEntity2Physical.cc  MeshDataBaseGEntity2Physical.h  MeshDataBaseIO.cc  MeshDataBaseIO.h  MeshDataBaseInterface.cc  (+18 more)
contrib/quickhull-4f65e08/: CMakeLists.txt  QuickHull.cpp  QuickHull.hpp
contrib/smesh-9.6.0/: CMakeLists.txt
converter/gmsh2exo/: CMakeLists.txt
python/: CMakeLists.txt  beamDLE.py  optional.i  pyNemosys.i  pyNemosys.py  pyNemosysSimmetrix.i  pyNemosysSymmx.i  pyNemosys_wrap.cpp  pySymmx.i  setup.py.in  setupSymmx.py.in  setup_havesymmx.py.in
rbfInterp/: CMakeLists.txt
rbfInterp/include/: r8lib.hpp
rbfInterp/src/: r8lib.cpp
rbfInterp/test/: rbfClassTest.C  rbf_interp_nd_prb.cpp
testing/: CMakeLists.txt
testing/output/: result.vtu
testing/test_data/: vol2planeTransfer_testresults.txt
testing/test_scripts/: diff_tol  diff_tol.cpp  diff_vtu.cpp  testAutoVerification.C  testBlockMSH.C  testCFM.C  testCFMQual.C  testCobaltGen.C  testConservativeSurfaceTransfer.C  testConservativeVolumeTransfer.C  testConversion.C  testCubature.C  testEP16.C  testEp16Post.C  testEp16Pre.C  testExoGeoMesh.C  testExoMesh.C  testFoamGeoMesh.C  testGeoMeshBase.C  testGeoMeshFactory.C  testGmshGeoMesh.C  testGmshMesh.C  testGmshMeshGen.C  testInpGeoMesh.C  testKMeans.C  testMeshGen.C  testNucMesh.C  testOmegahRefineDriver.C  testOmegahRefineSrv.C  testOrthoPoly.C  testOshGeoMesh.C  testOshGeoMeshCUDA.C  testPNTGen.C  testPackMesh.C  testPatchRecovery.C  testPatranGen.C  testProteus.C  testQHull.C  testRefinement.C  testRocPackPeriodic.C  (+12 more)
(+2128 files in other folders)
